--- a/.gitignore
+++ b/.gitignore
@@ -398,3 +398,4 @@ FodyWeavers.xsd
 *.sln.iml
 /OohelpWebApps.Software.Server/appsettings.Production.json
 /OohelpWebApps.Software.Server/UploadedFiles
+/.vscode
