--- a/OohelpWebApps.Software.Updater.NetFramework.WinForms/packages.config
+++ b/OohelpWebApps.Software.Updater.NetFramework.WinForms/packages.config
@@ -1,6 +1,6 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.18.2" targetFramework="net48" />
+  <package id="ILRepack.Lib.MSBuild.Task" version="2.0.26" targetFramework="net48" developmentDependency="true" />
   <package id="Microsoft.Bcl.AsyncInterfaces" version="8.0.0" targetFramework="net48" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net48" />
   <package id="System.Memory" version="4.5.5" targetFramework="net48" />
@@ -8,7 +8,7 @@
   <package id="System.Numerics.Vectors" version="4.5.0" targetFramework="net48" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="6.0.0" targetFramework="net48" />
   <package id="System.Text.Encodings.Web" version="8.0.0" targetFramework="net48" />
-  <package id="System.Text.Json" version="8.0.0" targetFramework="net48" />
+  <package id="System.Text.Json" version="8.0.2" targetFramework="net48" />
   <package id="System.Threading.Tasks.Extensions" version="4.5.4" targetFramework="net48" />
   <package id="System.ValueTuple" version="4.5.0" targetFramework="net48" />
 </packages>
