--- a/OohelpWebApps.Software.ZipExtractor.WinForms/OohelpWebApps.Software.ZipExtractor.WinForms.csproj
+++ b/OohelpWebApps.Software.ZipExtractor.WinForms/OohelpWebApps.Software.ZipExtractor.WinForms.csproj
@@ -2,8 +2,7 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <LangVersion>12.0</LangVersion>
-    <TargetFrameworks>net6.0-windows;net7.0-windows;net8.0-windows;net48</TargetFrameworks>
+    <TargetFrameworks>net9.0-windows;net48</TargetFrameworks>
     <UseWindowsForms>true</UseWindowsForms>
     <ImplicitUsings>enable</ImplicitUsings>
     <RootNamespace>OohelpWebApps.Software.ZipExtractor</RootNamespace>
