Refactor and update packages

--- a/OohelpWebApps.Software.Updater.NetCore.Wpf/OohelpWebApps.Software.Updater.NetCore.Wpf.csproj
+++ b/OohelpWebApps.Software.Updater.NetCore.Wpf/OohelpWebApps.Software.Updater.NetCore.Wpf.csproj
@@ -1,7 +1,7 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net9.0-windows</TargetFrameworks>
+    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>    
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
