--- a/OohelpWebApps.Software.Updater.NetCore.Wpf/OohelpWebApps.Software.Updater.NetCore.Wpf.csproj
+++ b/OohelpWebApps.Software.Updater.NetCore.Wpf/OohelpWebApps.Software.Updater.NetCore.Wpf.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net8.0-windows;net9.0-windows</TargetFrameworks>
+    <TargetFramework>net9.0-windows</TargetFramework>
     <ImplicitUsings>enable</ImplicitUsings>    
     <UseWPF>true</UseWPF>
     <GeneratePackageOnBuild>True</GeneratePackageOnBuild>
     <RootNamespace>OohelpWebApps.Software.Updater</RootNamespace>
     <AssemblyName>OohelpSoft.Software.Updater.NetCore.Wpf</AssemblyName>
 
-    <Version>1.7</Version>
+    <Version>1.8</Version>
     <Authors>OoHelp.Net</Authors>
     <Company>OoHelp.Net</Company>
     <PackageId>$(AssemblyName)</PackageId>
