--- a/OohelpWebApps.Software.Server/appsettings.json
+++ b/OohelpWebApps.Software.Server/appsettings.json
@@ -1,4 +1,17 @@
 {
-  "ConnectionString": "Data Source=(localdb)\\mssqllocaldb; Database=oohelpSoftware; Integrated Security=true;",
-  "Jwt": {}
+  "ConnectionStrings": {
+    "AppDbContext": "Server=(localdb)\\mssqllocaldb;Database=oohelpSoftware;Trusted_Connection=True;MultipleActiveResultSets=true;",
+    "LogsDatabaseConnection": "Server=(localdb)\\mssqllocaldb;Database=LogsDb;Trusted_Connection=True;MultipleActiveResultSets=true;"
+  },
+
+  "Jwt": {},
+
+  "Serilog": {
+    "MinimumLevel": {
+      "Default": "Information"      
+    },
+    "Properties": {
+      "Application": "SoftwareApi"
+    }
+  }
 }
