--- a/OohelpWebApps.Software.Server/appsettings.json
+++ b/OohelpWebApps.Software.Server/appsettings.json
@@ -8,10 +8,18 @@
 
   "Serilog": {
     "MinimumLevel": {
-      "Default": "Information"      
+      "Default": "Information"
     },
     "Properties": {
       "Application": "SoftwareApi"
     }
+  },
+
+  "Minio": {
+    "Endpoint": "your-account-id.r2.cloudflarestorage.com",
+    "AccessKey": "your-access-key",
+    "SecretKey": "your-secret-key",
+    "BucketName": "your-bucket-name",
+    "ProjectName": "SoftwareApi"
   }
 }
