--- a/OohelpWebApps.Software.Server/OohelpWebApps.Software.Server.csproj
+++ b/OohelpWebApps.Software.Server/OohelpWebApps.Software.Server.csproj
@@ -18,6 +18,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
     <PackageReference Include="OohelpSoft.Utiles.Result" Version="1.1.0" />
+    <PackageReference Include="Minio" Version="6.0.5" />
     <PackageReference Include="Serilog.AspNetCore" Version="9.0.0" />
     <PackageReference Include="Serilog.Sinks.Async" Version="2.1.0" />
     <PackageReference Include="Serilog.Sinks.MSSqlServer" Version="8.2.2" />
